Bringing back parallel builds with a percy nonce

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,8 +19,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  cypress:
+  internal:
+    if: |
+      github.repository_owner == 'Altinn' &&
+      (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
+
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        machines: [1, 2, 3]
     name: Internal
 
     steps:
@@ -52,17 +61,21 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: Verify cypress and run tests
+      - name: Run tests
+        env:
+          CYPRESS_PROJECT_ID: y2jhp6
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+          PERCY_PARALLEL_TOTAL: 3
+          PERCY_PARALLEL_NONCE: ${{ github.run_id }}-${{ github.run_attempt }}
         run: "
           yarn run cy:verify\n
-          export CYPRESS_PROJECT_ID=y2jhp6\n
-          export CYPRESS_RECORD_KEY=${{ secrets.CYPRESS_RECORD_KEY }}\n
-          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}\n
-          export PERCY_TOKEN=${{ secrets.PERCY_TOKEN }}\n
           bash -c 'yarn serve 8080 >/dev/null &'\n
-          bash -c 'npx percy exec -- yarn run cy:test:all:headless
+          bash -c 'npx percy exec --parallel -- yarn run cy:test:all:headless
             --env environment=tt02
             --record
+            --parallel
             --tag \"altinn-app-frontend\"
             --group altinn-app-frontend
             --ci-build-id $GITHUB_RUN_ID-$GITHUB_RUN_ATTEMPT'
@@ -74,7 +87,7 @@ jobs:
           name: redux-state-history
           path: test/redux-history/*.json
 
-  altinn-app-frontend-test-on-fork-pr:
+  external:
     if: |
      github.repository_owner == 'Altinn' &&
      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
