--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "classnames": "2.5.1",
     "dompurify": "3.1.7",
     "dot-object": "2.1.5",
+    "e": "^0.2.33",
     "eslint-plugin-preferred-import-path": "^1.1.0",
     "fast-array-diff": "^1.1.0",
     "fast-json-patch": "^3.1.1",
@@ -159,6 +160,7 @@
     "react-device-detect": "2.2.3",
     "react-dom": "18.3.1",
     "react-dropzone": "14.2.3",
+    "react-helmet-async": "^2.0.5",
     "react-leaflet": "^4.2.1",
     "react-number-format": "^5.3.1",
     "react-router-dom": "6.26.2",
