The github runner complained to me that we're supplying space-separated specs instead of a comma-separated list. Let's just point to the directory instead.

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -72,7 +72,7 @@ jobs:
           npx cypress verify\n
           bash -c 'yarn serve 8080 >/dev/null &'\n
           bash -c 'npx percy exec --parallel -- npx cypress run
-            --spec \'test/e2e/integration/*/*.ts\'
+            --spec test/e2e/integration
             --env environment=tt02
             --record
             --parallel
@@ -130,7 +130,7 @@ jobs:
           npx cypress verify\n
           bash -c 'yarn serve 8080 >/dev/null &'\n
          bash -c 'npx cypress run
-              --spec \'test/e2e/integration/*/*.ts\'
+              --spec test/e2e/integration
               --config watchForFileChanges=false
               --env environment=tt02'
         "
