--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,9 @@ on:
 
 jobs:
   build:
+    name: Build and deploy
     runs-on: ubuntu-latest
-    name: Build
+    environment: prod
     steps:
       - name: checkout
         uses: actions/checkout@v4
@@ -34,9 +35,21 @@ jobs:
           token: ${{secrets.ALTINN_CDN_TOKEN}}
           path: cdn
 
+      - name: Azure login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID_FC }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID_FC }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID_FC }}
+
       - name: Run release script
         working-directory: app-frontend
-        if: "!github.event.release.prerelease"
+        if: '!github.event.release.prerelease'
+        env:
+          FD_DOMAIN: ${{ vars.AZURE_DOMAIN_FC }}
+          FD_ENDPOINT: ${{ vars.AZURE_ENDPOINT_FC }}
+          FD_PROFILE: ${{ vars.AZURE_PROFILE_FC }}
+          FD_RESOURCEGROUP: ${{ vars.AZURE_RESOURCE_GROUP_FC }}
         run: |
           bash .github/scripts/release.sh \
            --frontend . \
@@ -48,16 +61,21 @@ jobs:
 
       - name: Run release script (pre-release)
         working-directory: app-frontend
-        if: "github.event.release.prerelease"
+        if: 'github.event.release.prerelease'
+        env:
+          FD_DOMAIN: ${{ vars.AZURE_DOMAIN_FC }}
+          FD_ENDPOINT: ${{ vars.AZURE_ENDPOINT_FC }}
+          FD_PROFILE: ${{ vars.AZURE_PROFILE_FC }}
+          FD_RESOURCEGROUP: ${{ vars.AZURE_RESOURCE_GROUP_FC }}
         run: |
-         bash .github/scripts/release.sh \
-           --frontend . \
-           --cdn ../cdn \
-           --commit \
-           --pre-release \
-           --azure-sync-cdn \
-           --azure-sa-name "${{ secrets.PRODUCTION_STORAGEACCOUNT_NAME }}" \
-           --azure-sa-token "${{ secrets.PRODUCTION_ALTINN_CDN_SAS_TOKEN }}"
+          bash .github/scripts/release.sh \
+            --frontend . \
+            --cdn ../cdn \
+            --commit \
+            --pre-release \
+            --azure-sync-cdn \
+            --azure-sa-name "${{ secrets.PRODUCTION_STORAGEACCOUNT_NAME }}" \
+            --azure-sa-token "${{ secrets.PRODUCTION_ALTINN_CDN_SAS_TOKEN }}"
 
       - name: Push to CDN
         working-directory: cdn
