--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
   "dependencies": {
     "@altinn/altinn-design-system": "0.30.2",
     "@babel/polyfill": "7.12.1",
-    "@date-io/date-fns": "1.3.13",
+    "@date-fns/tz": "^1.1.2",
     "@digdir/design-system-react": "0.54.0",
     "@digdir/designsystemet-css": "0.10.0",
     "@digdir/designsystemet-react": "0.63.1",
@@ -152,8 +152,6 @@
     "lru-cache": "^11.0.0",
     "marked": "14.1.2",
     "marked-mangle": "^1.0.1",
-    "moment": "2.30.1",
-    "moment-timezone": "^0.5.45",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "react": "18.3.1",
     "react-content-loader": "7.0.2",
