--- a/.github/workflows/revert.yml
+++ b/.github/workflows/revert.yml
@@ -40,7 +40,7 @@ jobs:
            --tag "${{ inputs.tag }}" \
            --actor "${{ github.actor }}" \
            --actor_id "${{ github.actor_id }}" \
-           --cdn ../cdn \
+           --cdn ./cdn \
            --commit \
            --azure-sync-cdn \
            --azure-sa-name "${{ secrets.PRODUCTION_STORAGEACCOUNT_NAME }}" \
