--- a/package.json
+++ b/package.json
@@ -128,9 +128,9 @@
     "@babel/polyfill": "7.12.1",
     "@date-fns/tz": "^1.1.2",
     "@digdir/design-system-react": "0.54.0",
-    "@digdir/designsystemet-css": "0.10.0",
-    "@digdir/designsystemet-react": "0.63.1",
-    "@digdir/designsystemet-theme": "0.15.3",
+    "@digdir/designsystemet-css": "1.0.0-next.35",
+    "@digdir/designsystemet-react": "1.0.0-next.35",
+    "@digdir/designsystemet-theme": "1.0.0-next.35",
     "@material-ui/core": "4.12.4",
     "@material-ui/pickers": "3.3.11",
     "@navikt/aksel-icons": "^7.0.0",
