Also the revert pipeline

--- a/.github/workflows/revert.yml
+++ b/.github/workflows/revert.yml
@@ -12,7 +12,12 @@ jobs:
   revert:
     name: Roll back and deploy
     runs-on: ubuntu-latest
-    environment: prod
+    environment: |-
+      ${{
+         contains(github.event.release.tag_name, 'preview') && 'test'
+      || contains(github.event.release.tag_name, 'rc')      && 'staging'
+      ||                                                       'prod'
+      }}
     permissions:
       id-token: write
     steps:
