--- a/.github/workflows/revert.yml
+++ b/.github/workflows/revert.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: |-
       ${{
-         contains(github.event.release.tag_name, 'preview') && 'test'
-      || contains(github.event.release.tag_name, 'rc')      && 'staging'
-      ||                                                       'prod'
+         contains(github.event.inputs.tag, 'preview') && 'test'
+      || contains(github.event.inputs.tag, 'rc')      && 'staging'
+      ||                                                 'prod'
       }}
     permissions:
       id-token: write
