--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -20,6 +20,9 @@ on:
 jobs:
   install:
     name: Internal
+    env:
+      CYPRESS_PROJECT_ID: y2jhp6
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     if: |
       github.repository_owner == 'Altinn' &&
       (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
@@ -54,6 +57,13 @@ jobs:
       fail-fast: false
       matrix:
         containers: [1, 2, 3]
+    env:
+      CYPRESS_PROJECT_ID: y2jhp6
+      CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+      PERCY_PARALLEL_TOTAL: 3
+      PERCY_PARALLEL_NONCE: ${{ github.run_id }}-${{ github.run_attempt }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -67,17 +77,10 @@ jobs:
           name: dist
 
       - name: Confirm dist folder
-        run: ls dist || echo "dist folder not found"
+        run: ls dist
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
-        env:
-          CYPRESS_PROJECT_ID: y2jhp6
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
-          PERCY_PARALLEL_TOTAL: 3
-          PERCY_PARALLEL_NONCE: ${{ github.run_id }}-${{ github.run_attempt }}
         with:
           start: npx http-server dist --cors='*'
           record: true
