--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -75,6 +75,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist
+          path: dist
 
       - name: Confirm dist folder
         run: ls dist
