--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -86,7 +86,7 @@ jobs:
           PERCY_PARALLEL_NONCE: ${{ github.run_id }}-${{ github.run_attempt }}
         uses: cypress-io/github-action@v6
         with:
-          start: npx http-server dist --cors='*'
+          start: npx http-server dist --cors='*' & npx percy exec --parallel
           record: true
           parallel: true
           group: altinn-app-frontend
