--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -53,7 +53,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2, 3]
+        containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -77,7 +77,12 @@ jobs:
           PERCY_PARALLEL_NONCE: ${{ github.run_id }}-${{ github.run_attempt }}
         uses: cypress-io/github-action@v6
         with:
-          start: npx http-server dist --cors='*' & npx percy exec --parallel
+          start: npx http-server dist --cors='*'
+          # quote the url to be safe against YML parsing surprises
+          wait-on: 'http://localhost:8080'
+          # the entire command will automatically be prefixed with "npm"
+          # and we need the second "npm" to execute "cypress run ..." command line
+          command-prefix: 'percy exec -- npx'
           record: true
           parallel: true
           group: altinn-app-frontend
