--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -44,10 +44,11 @@ jobs:
 
   cypress-run-internal:
     name: Cypress Run Internal
-    if: |
-      github.repository_owner == 'Altinn' &&
-      (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
-      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
+    if: false
+    # if: |
+    #   github.repository_owner == 'Altinn' &&
+    #   (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
+    #   (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: install
@@ -99,9 +100,9 @@ jobs:
 
   external-cypress-run:
     name: Cypress Run External
-    if: |
-      github.repository_owner == 'Altinn' &&
-      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
+    # if: |
+    #   github.repository_owner == 'Altinn' &&
+    #   (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
 
     runs-on: ubuntu-latest
     needs: install
