--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -44,11 +44,10 @@ jobs:
 
   cypress-run-internal:
     name: Cypress Run Internal
-    if: false
-    # if: |
-    #   github.repository_owner == 'Altinn' &&
-    #   (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
-    #   (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
+    if: |
+      github.repository_owner == 'Altinn' &&
+      (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: install
@@ -100,9 +99,9 @@ jobs:
 
   external-cypress-run:
     name: Cypress Run External
-    # if: |
-    #   github.repository_owner == 'Altinn' &&
-    #   (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
+    if: |
+      github.repository_owner == 'Altinn' &&
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == true)
 
     runs-on: ubuntu-latest
     needs: install
