--- a/.github/workflows/revert.yml
+++ b/.github/workflows/revert.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Validate tag
         run: |
           echo "Validating that the tag is in the correct format"
-          echo "${{ github.event.inputs.tag }}" | grep -P '^v(\d+)\.(\d+)\.(\d+)(-(preview|rc)\d+$|$)'
+          echo "${{ github.event.inputs.tag }}" | grep -P '^v(\d+)\.(\d+)\.(\d+)(-(preview|rc)\.\d+$|$)'
 
       - name: Checkout
         uses: actions/checkout@v4
