adds trigger on opened, reopened, synchornized and ready_for_review prs

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,6 +14,11 @@ on:
       - 'test/**'
       - 'yarn.lock'
       - '.github/workflows/cypress.yml'
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
   workflow_dispatch:
 
