--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "@navikt/aksel-icons": "^7.0.0",
     "@tanstack/react-query": "^5.25.0",
     "ajv": "8.17.1",
+    "ajv-errors": "^3.0.0",
     "ajv-formats": "3.0.1",
     "ajv-formats-draft2019": "^1.6.1",
     "axios": "1.7.7",
