--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cy:open": "cypress open --env environment=tt02",
     "cy:open:docker": "cypress open --env environment=docker",
     "cy:run": "cypress run --env environment=tt02",
-    "cy:run:docker": "cypress open --env environment=docker",
+    "cy:run:docker": "cypress run --env environment=docker",
     "cy:parallel": "cypress-parallel -s cy:run -t 3 -d test/e2e/integration",
     "cy:parallel:docker": "cypress-parallel -s cy:run:docker -t 3 -d test/e2e/integration",
     "tsc": "yarn gen && tsc && tsc --project test/tsconfig.json",
