--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "strict": true,
     "strictNullChecks": true,
     "noUnusedLocals": false,
     "esModuleInterop": true,
