--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "gen:clean:all": "node -r ts-node/register/transpile-only -r tsconfig-paths/register src/codegen/clean-generated.ts",
     "gen:restore": "yarn gen:clean:all && yarn gen",
     "copy-schemas": "node -r ts-node/register/transpile-only -r tsconfig-paths/register scripts/copy-schemas.ts",
-    "start": "yarn gen && cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
-    "build": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
-    "docker": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && yarn serve 8080",
-    "serve": "http-server dist --cors='*' -p",
+    "start": "yarn gen && cross-env NODE_ENV=development vite build --watch --mode development",
+    "build": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=production vite build",
+    "docker": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=development vite build && vite preview --port 8080",
+    "serve": "vite preview --port 8080",
     "test": "yarn gen && jest",
     "test:watch": "yarn gen && jest --watch",
     "test:watchall": "yarn gen && jest --watchAll",
@@ -34,18 +34,10 @@
     "bench": "tsx --expose_gc --tsconfig benchmarks/tsconfig.json benchmarks/${0}"
   },
   "devDependencies": {
-    "@babel/core": "7.26.0",
-    "@babel/plugin-transform-runtime": "7.25.9",
-    "@babel/preset-env": "7.26.0",
-    "@babel/preset-react": "7.25.9",
-    "@babel/runtime": "7.26.0",
-    "@babel/runtime-corejs3": "7.26.0",
     "@eslint/compat": "1.2.3",
     "@faker-js/faker": "9.2.0",
     "@percy/cli": "1.30.4",
     "@percy/cypress": "3.1.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
-    "@tanstack/react-query-devtools": "5.62.3",
     "@testing-library/cypress": "10.0.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
@@ -65,13 +57,11 @@
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.17.0",
     "@typescript-eslint/parser": "8.17.0",
+    "@vitejs/plugin-react": "^4.0.0",
     "axe-core": "4.10.2",
     "babel-jest": "29.7.0",
-    "babel-loader": "9.2.1",
     "caniuse-lite": "1.0.30001686",
-    "core-js": "3.39.0",
     "cross-env": "7.0.3",
-    "css-loader": "7.1.2",
     "cypress": "13.16.0",
     "cypress-axe": "1.5.0",
     "cypress-iframe": "1.0.1",
@@ -80,7 +70,6 @@
     "cypress-plugin-tab": "1.0.5",
     "cypress-wait-until": "3.0.2",
     "dotenv": "16.4.6",
-    "esbuild-loader": "4.2.2",
     "eslint": "9.16.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "4.1.0",
@@ -94,8 +83,6 @@
     "eslint-plugin-sonarjs": "2.0.4",
     "eslint-plugin-testing-library": "7.0.0",
     "eslint-plugin-unused-imports": "4.1.4",
-    "fork-ts-checker-notifier-webpack-plugin": "9.0.0",
-    "fork-ts-checker-webpack-plugin": "9.0.2",
     "globals": "15.13.0",
     "http-server": "14.1.1",
     "husky": "9.1.7",
@@ -105,17 +92,13 @@
     "jest-junit": "16.0.0",
     "jest-mock-axios": "4.8.0",
     "jest-preview": "0.3.1",
-    "js-levenshtein": "1.1.6",
     "jsdom": "25.0.1",
     "lint-staged": "15.2.10",
     "mime": "4.0.4",
-    "mini-css-extract-plugin": "2.9.2",
     "postcss-modules": "6.0.1",
     "prettier": "3.4.1",
-    "react-refresh": "0.14.2",
     "resize-observer-polyfill": "1.5.1",
     "source-map-loader": "5.0.0",
-    "style-loader": "4.0.0",
     "terser-webpack-plugin": "5.3.10",
     "tinybench": "3.0.7",
     "ts-jest": "29.2.5",
@@ -126,9 +109,7 @@
     "typescript-plugin-css-modules": "5.1.0",
     "use-immer": "0.10.0",
     "utility-types": "3.11.0",
-    "webpack": "5.96.1",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.1.0"
+    "vite": "^4.4.9"
   },
   "dependencies": {
     "@altinn/altinn-design-system": "0.30.2",
@@ -173,10 +154,12 @@
     "react-number-format": "5.4.2",
     "react-router-dom": "6.28.0",
     "react-toastify": "10.0.6",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "terraformer-wkt-parser": "1.2.1",
     "typescript": "5.7.2",
     "typescript-eslint": "8.17.0",
     "uuid": "11.0.3",
+    "vite-plugin-checker": "^0.8.0",
     "zustand": "5.0.1"
   },
   "packageManager": "yarn@4.5.3",
