--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: run tests
         working-directory: app-frontend
-        run: yarn test --coverage --runInBand
+        run: yarn test --coverage
 
       - name: SonarCloud Scan
         if: |
