--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "typescript": "5.7.2",
     "typescript-eslint": "8.18.2",
     "uuid": "11.0.3",
+    "zod": "^3.23.8",
     "zustand": "5.0.2"
   },
   "packageManager": "yarn@4.6.0",
