--- a/package.json
+++ b/package.json
@@ -133,9 +133,9 @@
     "@babel/polyfill": "7.12.1",
     "@date-fns/tz": "1.2.0",
     "@digdir/design-system-react": "0.54.0",
-    "@digdir/designsystemet-css": "1.0.0-next.49",
-    "@digdir/designsystemet-react": "1.0.0-next.49",
-    "@digdir/designsystemet-theme": "1.0.0-next.49",
+    "@digdir/designsystemet-css": "0.100.52",
+    "@digdir/designsystemet-react": "0.100.52",
+    "@digdir/designsystemet-theme": "0.100.52",
     "@material-ui/core": "4.12.4",
     "@navikt/aksel-icons": "7.13.0",
     "@tanstack/react-query": "5.66.7",
