loader refactor in progress

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
+    "@welldone-software/why-did-you-render": "^8",
     "axe-core": "4.10.2",
     "babel-jest": "29.7.0",
     "babel-loader": "9.2.1",
@@ -171,6 +172,7 @@
     "react-number-format": "5.4.3",
     "react-router-dom": "6.28.2",
     "react-toastify": "11.0.3",
+    "reselect": "^5.1.1",
     "terraformer-wkt-parser": "1.2.1",
     "typescript": "5.7.3",
     "typescript-eslint": "8.21.0",
