--- a/package.json
+++ b/package.json
@@ -171,13 +171,14 @@
     "react-leaflet": "4.2.1",
     "react-number-format": "5.4.3",
     "react-router-dom": "6.28.2",
+    "react-scan": "^0.2.8",
     "react-toastify": "11.0.3",
     "reselect": "^5.1.1",
     "terraformer-wkt-parser": "1.2.1",
     "typescript": "5.7.3",
     "typescript-eslint": "8.21.0",
     "uuid": "11.0.5",
-    "zustand": "5.0.3"
+    "zustand": "^5.0.3"
   },
   "packageManager": "yarn@4.6.0",
   "lint-staged": {
