Implementing script to run all test apps and cypress tests locally

--- a/.gitignore
+++ b/.gitignore
@@ -403,6 +403,8 @@ layout.schema.v1.json
 layout-sets.schema.v1.json
 layoutSettings.schema.v1.json
 
+/test/run-all-artifacts
+
 eslint-results.html
 
 runner-results
