--- a/template.env
+++ b/template.env
@@ -25,6 +25,9 @@ JEST_PREVIEW_AUTO=false
 ## ------------------------
 ## Cypress settings
 
+## Directory that contains apps to use for testing (see `cypress-run-all.ts`)
+#CYPRESS_APPS_DIR=C:/Code/altinn/apps
+
 ## Enable this to record videos of Cypress failures
 CYPRESS_RECORD_VIDEO=false
 
