--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react-dom": "18.3.5",
     "@types/react-router-dom": "5.3.3",
     "@types/react-virtualized": "^9",
+    "@types/react-window": "^1",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
@@ -174,6 +175,7 @@
     "react-scan": "^0.2.8",
     "react-toastify": "11.0.3",
     "react-virtualized": "^9.22.6",
+    "react-window": "^1.8.11",
     "reselect": "^5.1.1",
     "terraformer-wkt-parser": "1.2.1",
     "typescript": "5.7.3",
