Replacing ds-icons with aksel-icons

--- a/package.json
+++ b/package.json
@@ -137,8 +137,7 @@
     "@digdir/designsystemet-react": "0.63.1",
     "@digdir/designsystemet-theme": "0.15.3",
     "@material-ui/core": "4.12.4",
-    "@navikt/aksel-icons": "7.14.2",
-    "@navikt/ds-icons": "^3.4.3",
+    "@navikt/aksel-icons": "^7.17.4",
     "@tanstack/react-query": "5.66.9",
     "ajv": "8.17.1",
     "ajv-errors": "3.0.0",
