adds i18n to resolve texts, but missing resolving variables

--- a/package.json
+++ b/package.json
@@ -159,6 +159,8 @@
     "fast-array-diff": "1.1.0",
     "fast-json-patch": "3.1.1",
     "html-react-parser": "5.2.3",
+    "i18next": "^25.2.0",
+    "i18next-http-backend": "^3.0.2",
     "immer": "10.1.1",
     "jsonpointer": "5.0.1",
     "leaflet": "1.9.4",
@@ -173,6 +175,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "14.3.8",
     "react-helmet-async": "2.0.5",
+    "react-i18next": "^15.5.1",
     "react-leaflet": "4.2.1",
     "react-number-format": "5.4.4",
     "react-router-dom": "6.30.0",
