adds yarn gen:next to start script

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "gen": "tsx src/codegen/run.ts",
     "gen:next": "cross-env IS_NEXT=true tsx src/codegen/run.ts",
     "copy-schemas": "tsx scripts/copy-schemas.ts",
-    "start": "yarn gen && cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
-    "build": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
+    "start": "yarn gen && yarn gen:next &&  cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
+    "build": "yarn gen && yarn gen:next && yarn copy-schemas && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "docker": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && yarn serve 8080",
     "serve": "http-server dist --cors='*' -p",
     "test": "yarn gen && jest",
